라우팅 설정

--- a/grand_festival/netlify.toml
+++ b/grand_festival/netlify.toml
@@ -3,4 +3,9 @@
   publish = "build/web"
 
 [build.environment]
-  FLUTTER_VERSION = "3.19.0" 
+  FLUTTER_VERSION = "3.19.0"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200 
