--- a/grand_festival/pubspec.yaml
+++ b/grand_festival/pubspec.yaml
@@ -1,4 +1,4 @@
-name: 칠순축하
+name: my_flutter_app
 description: "칠순잔치 웹 앱"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
